[tool.poetry]
name = "photography-raw"
version = "0.1.0"
description = ""
authors = ["gustavooliveira <gusatlan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rawpy = "^0.23.2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
